--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest src --watch",
+    "test": "jest src --watchAll",
     "prepare": "husky install",
     "local-ts": "tsc --watch",
     "prod-ts": "tsc"
@@ -23,7 +23,12 @@
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.0",
     "jest": "^28.1.3",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "jsdom": "^20.0.0",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "jest-environment-jsdom": "^28.1.3"
   }
 }
